--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -15,12 +15,21 @@
 .nav{
   display: flex;
   gap: 57px;
+  font-size: 24px;
+}
+
+.linkActive  {
+  border-bottom: 1px solid var(--colorRed);
+}
+
+.link{
+  border: none;
 }
 
 @media screen and (max-width: 768px) {
 
   .header {
-      padding: 20px;
+      padding: 16px 20px;
   }
 
   .header img {
@@ -29,5 +38,6 @@
 
   .nav {
     gap: 10px;
+    font-size: 12px;
   }
 }
