--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -8,36 +8,43 @@
   padding: 40px 20px;
 }
 
-.header img{
+.header img {
   padding-right: 20px;
 }
 
-.nav{
+.nav {
   display: flex;
   gap: 57px;
+}
+
+.linkActive {
+  border-bottom: 1px solid var(--colorRed);
   font-size: 24px;
 }
 
-.linkActive  {
-  border-bottom: 1px solid var(--colorRed);
-}
-
-.link{
+.link {
   border: none;
+  font-size: 24px;
 }
 
 @media screen and (max-width: 768px) {
-
   .header {
-      padding: 16px 20px;
+    padding: 16px 20px;
   }
 
   .header img {
-      max-width: 145px;
+    max-width: 145px;
   }
 
   .nav {
     gap: 10px;
+  }
+
+  .linkActive {
+    font-size: 12px;
+  }
+
+  .link {
     font-size: 12px;
   }
 }
