--- a/src/components/aboutBanner/AboutBanner.module.css
+++ b/src/components/aboutBanner/AboutBanner.module.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 44px;
   overflow: hidden;
   background-image: url("../../assets/about_bgackground.jpg");
   background-size: cover;
@@ -14,13 +15,14 @@
   position: absolute;
   content: "";
   inset: 0;
-  background: #000000;
+  background: #000000;   
   opacity: 0.3;
 }
 
 @media screen and (max-width: 768px) {
   .banner {
-    border-radius: 10px;
     height: 111px;
+    margin-top: 17px;
+    border-radius: 10px;
   }
 }
