--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,15 +1,20 @@
 .header {
   max-width: 1280px;
-  /* width: 100%; */
-  margin: auto;
+  height: 68px;
+  padding: 0 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 20px;
+  margin-top: 40px;
+}
+
+.header > a {
+  height: 100%;
 }
 
 .header img {
   padding-right: 20px;
+  height: 100%;
 }
 
 .nav {
@@ -29,11 +34,13 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    padding: 16px 20px;
+    height: 47px;
+    padding: 0 20px;
+    margin-top: 20px;
   }
 
   .header img {
-    max-width: 145px;
+    height: 47px;
   }
 
   .nav {
