--- a/src/components/profil/Profil.module.css
+++ b/src/components/profil/Profil.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   gap: 10px;
 }
 
@@ -17,4 +18,17 @@
   border-radius: 50%;
   overflow: hidden;
   aspect-ratio: 1/1;
+}
+
+@media screen and (max-width: 768px) {
+  .host {
+    font-size: 12px;
+    line-height: normal;
+  }
+  
+  .photo {
+    max-width: 32px;
+  }
+
+
 }
