--- a/src/components/slideshow/Slideshow.module.css
+++ b/src/components/slideshow/Slideshow.module.css
@@ -2,7 +2,7 @@
   position: relative;
   height: 415px;
   overflow: hidden;
-  border-radius: 20px;
+  border-radius: 25px;
 }
 
 .contentImage {
@@ -29,11 +29,6 @@
   z-index: 1;
   top: 50%;
   transform: translateY(-50%);
-  width: 48px;
-  height: 48px;
-  border-radius: 24px;
-  background-color: white;
-  border: 1px solid #ddd;
 }
 
 .leftArrow {
@@ -44,11 +39,28 @@
   right: 24px;
 }
 
+.leftArrow img,
+.rightArrow img {
+  height: 80px;
+}
+
 .pagination {
   position: absolute;
-  bottom: 10px;
+  bottom: 25px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
   color: white;
+  font-size: 18px;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    height: 255px;
+  }
+
+  .leftArrow img,
+  .rightArrow img {
+    height: 24px;
+  }
 }
