--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -1,6 +1,16 @@
 .article {
+  max-width: 1023px;
   display: flex;
   flex-direction: column;
-  padding: 50px 0 201px 0;
+  padding: 30px 0 201px 0;
   gap: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .article {
+    width: 335px;
+    padding: 19px 0 168px 0;
+  }
 }
