--- a/src/pages/error/Error.module.css
+++ b/src/pages/error/Error.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0 159px 0;
+  padding: 120px 0 160px 0;
 }
 
 .article h1 {
@@ -13,6 +13,7 @@
   font-size: 36px;
   padding-bottom: 182px;
   text-align: center;
+  text-justify: inter-word;
 }
 
 .link {
