--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -6,6 +6,8 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header > a {
