--- a/src/components/homeBanner/HomeBanner.module.css
+++ b/src/components/homeBanner/HomeBanner.module.css
@@ -30,6 +30,12 @@
   font-size: 48px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .banner h1 span {
+    font-size: 36px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .banner {
     border-radius: 10px;
