--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -1,5 +1,6 @@
 .article {
   max-width: 1023px;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   padding: 30px 0 201px 0;
@@ -10,7 +11,7 @@
 
 @media screen and (max-width: 768px) {
   .article {
-    width: 335px;
+    width: 100%;
     padding: 19px 0 168px 0;
   }
 }
