--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -13,8 +13,13 @@
   background: var(--colorGreyLight);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
+@media screen and (max-width: 767px) {
   .home {
     margin-top: 22px;
   }
@@ -25,5 +30,4 @@
     background: none;
     padding: 0;
   }
-
 }
