--- a/src/pages/error/Error.module.css
+++ b/src/pages/error/Error.module.css
@@ -13,15 +13,33 @@
   font-size: 36px;
   padding-bottom: 182px;
   text-align: center;
-  text-justify: inter-word;
 }
 
 .link {
   font-size: 18px;
   border-bottom: 1px solid var(--colorRed);
+  transition: transform 200ms linear;
 }
 
-@media screen and (max-width: 768px) {
+.link:hover {
+  transform: scale(1.1);
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .article h1 {
+    font-size: 184px;
+  }
+
+  .article p {
+    font-size: 24px;
+  }
+
+  .link {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 767px) {
   .article h1 {
     font-size: 96px;
   }
