--- a/src/components/homeBanner/HomeBanner.module.css
+++ b/src/components/homeBanner/HomeBanner.module.css
@@ -5,9 +5,10 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-image: url("../../assets/home_background.jpg");
+  background-image: url("../../assets/home_BG.jpg");
   background-size: cover;
   border-radius: 25px;
+  background-position-y: -125px;
 }
 
 .banner::before {
@@ -40,6 +41,9 @@
   .banner {
     border-radius: 10px;
     height: 111px;
+    background-position-y: -100px;
+    background-position-x: -150px;
+    background-size: 170%;
   }
 
   .banner h1 {
